--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
-absl-py
-gin-config==0.1.3
-tensorflow-gpu==2.0.1
-tf-agents==0.3.0
-tensorflow-probability==0.8
-gym==0.12.5
+absl-py==0.10
+gin-config==0.4.0
+tensorflow-gpu==2.5.0
+tensorboard==2.11
+tf-agents==0.8.0
+tensorflow-probability==0.12.2
+gym==0.17.0
+matplotlib==3.6
+six==1.15.0
+grpcio==1.34.0
+protobuf==3.20.3
+cloudpickle==1.3.0
